--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,33 @@
   flex-direction: column;
   height: 100%;
   background-color: #ddefee;
-}
 
+  .top-section {
+    background-color: coral;
+    text-align: center;
+    padding: 6.25rem 0;
+
+    &__time {
+      font-size: 7.5rem;
+      color: #f9f9f9;
+      font-weight: 700;
+      text-shadow: 0 1px 5px rgba(#000, .4);
+    }
+
+    &__date {
+      font-size: 1.75rem;
+      color: #f9f9f9;
+      text-shadow: 0 1px 5px rgba(#000, .4);
+    }
+  }
+
+  .content-section {
+    background-color: steelblue;
+    flex-grow: 1;
+  }
+
+  .bottom-section {
+    background-color: dodgerblue;
+  }
+}
 
