--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,10 +2,11 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  background-color: #ddefee;
+  background-size: cover;
+  background: url('https://images.unsplash.com/photo-1652811232193-72e7281988ef?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=1080&ixid=MnwxfDB8MXxyYW5kb218MHx8fHx8fHx8MTY1NTEyNDAxNw&ixlib=rb-1.2.1&q=80&w=1920') no-repeat fixed center center;
 
   .top-section {
-    background-color: coral;
+    //background-color: coral;
     text-align: center;
     padding: 6.25rem 0;
 
@@ -24,12 +25,17 @@
   }
 
   .content-section {
-    background-color: steelblue;
+    //background-color: steelblue;
     flex-grow: 1;
   }
 
   .bottom-section {
-    background-color: dodgerblue;
+    //background-color: dodgerblue;
+    display: flex;
+
+    app-tabs {
+      margin: 0 auto;
+    }
   }
 }
 
