--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,7 +6,6 @@
   background: url('https://images.unsplash.com/photo-1652811232193-72e7281988ef?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=1080&ixid=MnwxfDB8MXxyYW5kb218MHx8fHx8fHx8MTY1NTEyNDAxNw&ixlib=rb-1.2.1&q=80&w=1920') no-repeat fixed center center;
 
   .top-section {
-    //background-color: coral;
     text-align: center;
     padding: 6.25rem 0;
 
@@ -25,12 +24,11 @@
   }
 
   .content-section {
-    //background-color: steelblue;
+    min-height: 0;
     flex-grow: 1;
   }
 
   .bottom-section {
-    //background-color: dodgerblue;
     display: flex;
 
     app-tabs {
