done the todos view UI

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
 @import url("https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css");
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Roboto:wght@400;500;700&display=swap');
+@import url('http://fonts.cdnfonts.com/css/sf-pro-display');
 @import url('https://fonts.googleapis.com/css?family=Material+Icons+Outlined');
 
 html,
 body {
   height: 100%;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'SF Pro Display', sans-serif;
 }
 
 h1 {
