--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -1,1 +1,12 @@
-<p>notes works!</p>
+<div class="notes-wrapper">
+  <div class="container">
+    <div class="notes-wrapper__list">
+
+      <div class="notes-wrapper__list__card">
+        <div class="notes-wrapper__list__card__title">Note title</div>
+        <div class="notes-wrapper__list__card__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, pariatur!</div>
+      </div>
+
+    </div>
+  </div>
+</div>
