done the router animation

--- a/src/app/bookmarks/bookmarks.component.html
+++ b/src/app/bookmarks/bookmarks.component.html
@@ -6,6 +6,45 @@
       <app-bookmark-tile></app-bookmark-tile>
       <app-bookmark-tile></app-bookmark-tile>
       <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
+      <app-bookmark-tile></app-bookmark-tile>
 
     </div>
   </div>
