created add note UI and created a service for notes

--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -7,6 +7,12 @@
         <div class="notes-wrapper__list__card__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, pariatur!</div>
       </div>
 
+      <div class="btn-container btn-center">
+        <a routerLink="add" class="btn add-btn">
+          <i class="material-icons-outlined">add</i>
+          Add
+        </a>
+      </div>
     </div>
   </div>
 </div>
