--- a/src/app/notes/notes.component.scss
+++ b/src/app/notes/notes.component.scss
@@ -7,7 +7,6 @@
     &__card {
       background-color: rgba(#000, .6);
       backdrop-filter: blur(5px);
-      margin-bottom: 1rem;
       padding: 1rem;
       border-radius: .5rem;
       color: #d9d9d9;
@@ -27,6 +26,10 @@
       &__content {
 
       }
+    }
+
+    .add-btn i {
+      margin-right: .25rem;
     }
   }
 }
