--- a/src/styles.scss
+++ b/src/styles.scss
@@ -70,13 +70,16 @@ h2.bold {
   backdrop-filter: blur(10px);
 }
 
+.field-wrapper {
+  margin-bottom: 1rem;
+}
+
 .input-field,
 .textarea-field {
   font-size: 1.15rem;
   width: 100%;
   font-family: 'SF Pro Display', sans-serif;
   padding: .5rem;
-  margin-bottom: 1rem;
   border: 0;
   border-radius: .25rem;
   display: block;
