--- a/src/app/edit-note/edit-note.component.html
+++ b/src/app/edit-note/edit-note.component.html
@@ -1,19 +1,20 @@
-<div class="add-note-wrapper has-blurred-white-bg container">
-  <h2 class="bold">New Note</h2>
+<div class="edit-note-wrapper has-blurred-white-bg container">
+  <h2 class="bold">Edit Note</h2>
 
-  <form #form="ngForm" (ngSubmit)="onFormSubmit(form)">
+  <p *ngIf="!note">Note not found!</p>
+  <form #form="ngForm" (ngSubmit)="onFormSubmit(form)" *ngIf="note">
     <div class="field-wrapper">
       <input
         class="input-field"
         type="text"
         placeholder="Enter note title..."
-        ngModel
+        [ngModel]="note.title"
         name="title"
         #titleField="ngModel"
         minlength="3"
         required
       >
-      <ng-container *ngIf="showValidationErrors && titleField.invalid">
+      <ng-container *ngIf="titleField.invalid">
         <p *ngIf="titleField.errors?.required">Please enter a note title</p>
         <p *ngIf="titleField.errors?.minlength">Title must be atleast 3 characters</p>
       </ng-container>
@@ -23,15 +24,16 @@
       <textarea
         class="textarea-field"
         placeholder="Enter note content..."
-        ngModel
+        [ngModel]="note.content"
         name="content"
       >
       </textarea>
     </div>
 
-    <div class="btn-container btn-space-between">
+    <div class="btn-container">
       <a routerLink="../" class="btn">Cancel</a>
-      <button class="btn">Create Note</button>
+      <button type="button" class="btn" (click)="deleteNote()">Delete</button>
+      <button class="btn align-end">Save</button>
     </div>
   </form>
 </div>
