--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -1,7 +1,9 @@
 <div class="notes-wrapper">
   <div class="container">
     <div class="notes-wrapper__list">
-      <app-note-card *ngFor="let note of notes" [note]="note"></app-note-card>
+      <a [routerLink]="[note.id]" *ngFor="let note of notes">
+        <app-note-card [note]="note"></app-note-card>
+      </a>
 
       <div class="btn-container btn-center">
         <a routerLink="add" class="btn add-btn">
