--- a/src/app/add-note/add-note.component.html
+++ b/src/app/add-note/add-note.component.html
@@ -31,7 +31,7 @@
 
     <div class="btn-container btn-space-between">
       <a routerLink="../" class="btn">Cancel</a>
-      <button class="btn">Create Note</button>
+      <button class="btn align-end">Create Note</button>
     </div>
   </form>
 </div>
