done edit and delete functionality of todos

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 @import url("https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css");
 @import url('http://fonts.cdnfonts.com/css/sf-pro-display');
-@import url('https://fonts.googleapis.com/css?family=Material+Icons+Outlined');
+@import url('https://fonts.googleapis.com/css?family=Material+Icons+Outlined|Material+Icons');
 
 html,
 body {
