--- a/src/app/todo-item/todo-item.component.html
+++ b/src/app/todo-item/todo-item.component.html
@@ -3,4 +3,13 @@
     <i class="material-icons-outlined">check</i>
   </div>
   <p class="todos-wrapper__todo-item__text">{{ todo.text }}</p>
+
+  <div class="todo-item-actions" (click)="$event.stopPropagation()">
+    <div class="btn todo-item-actions__btn" (click)="onEditClick()">
+      <i class="material-icons">edit</i>
+    </div>
+    <div class="btn todo-item-actions__btn" (click)="onDeleteClick()">
+      <i class="material-icons">delete</i>
+    </div>
+  </div>
 </div>
