--- a/src/app/todo-item/todo-item.component.scss
+++ b/src/app/todo-item/todo-item.component.scss
@@ -1,9 +1,10 @@
 .todos-wrapper{
   &__todo-item {
+    position: relative;
     display: flex;
     background-color: rgba(#000, .6);
     backdrop-filter: blur(3px);
-    border-radius: 2rem;
+    border-radius: 1.5rem;
     margin-bottom: 1rem;
     padding: .5rem .7rem;
     align-items: center;
@@ -50,6 +51,46 @@
         i {
           opacity: 1;
         }
+      }
+    }
+
+    .todo-item-actions {
+      position: absolute;
+      top: .2rem;
+      right: .2rem;
+      background: rgba(#444, .8);
+      backdrop-filter: blur(3px);
+      border-radius: 2rem;
+      visibility: hidden;      // hide by default
+      opacity: 0;
+      transition: .2s;
+
+      &__btn {
+        padding: .6rem;
+        background: transparent;
+
+        i {
+          font-size: 1.15rem;
+        }
+
+        &:first-child {
+          border-radius: 2rem 0 0 2rem;
+        }
+
+        &:last-child {
+          border-radius: 0 2rem 2rem 0;
+        }
+
+        &:hover {
+          background: #444;
+        }
+      }
+    }
+
+    &:hover {
+      .todo-item-actions {
+        visibility: visible;     // show actions on hover
+        opacity: 1;
       }
     }
   }
