--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -2,6 +2,7 @@
   <div class="container">
 
     <app-todo-item
+      @todoItemAnimation
       *ngFor="let todo of todos"
       [todo]="todo"
       (click)="toggleCompleted(todo)"
