--- a/src/app/edit-todo/edit-todo.component.html
+++ b/src/app/edit-todo/edit-todo.component.html
@@ -1,1 +1,30 @@
-<p>edit-todo works!</p>
+<div class="edit-todo-wrapper has-blurred-white-bg container">
+  <h2 class="bold">Edit Todo</h2>
+
+  <p *ngIf="!todo">Todo Not Found!</p>
+
+  <form #form="ngForm" *ngIf="todo" (ngSubmit)="onFormSubmit(form)">
+    <div class="field-wrapper">
+      <input
+        class="input-field"
+        type="text"
+        placeholder="Enter todo text..."
+        [ngModel]="todo.text"
+        name="text"
+        #textField="ngModel"
+        minlength="3"
+        required
+      >
+
+      <ng-container *ngIf="textField.invalid">
+        <p *ngIf="textField.errors?.required">Please enter some text</p>
+        <p *ngIf="textField.errors?.minlength">Todo text must be atleast 3 characters</p>
+      </ng-container>
+    </div>
+
+    <div class="btn-container">
+      <a routerLink="../" class="btn">Cancel</a>
+      <button class="btn align-end">Save</button>
+    </div>
+  </form>
+</div>
