--- a/src/app/bookmarks/bookmarks.component.html
+++ b/src/app/bookmarks/bookmarks.component.html
@@ -1,10 +1,13 @@
 <div class="bookmarks-wrapper">
   <div class="container">
-
     <div class="bookmark-tiles-container">
-
       <app-bookmark-tile *ngFor="let bookmark of bookmarks" [bookmark]="bookmark"></app-bookmark-tile>
-
+    </div>
+    <div class="btn-container btn-center">
+      <a routerLink="add" class="btn add-btn">
+        <i class="material-icons-outlined">add</i>
+        Add
+      </a>
     </div>
   </div>
 </div>
