--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   height: 100%;
   background-size: cover;
-  background: url('https://images.unsplash.com/photo-1652811232193-72e7281988ef?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=1080&ixid=MnwxfDB8MXxyYW5kb218MHx8fHx8fHx8MTY1NTEyNDAxNw&ixlib=rb-1.2.1&q=80&w=1920') no-repeat fixed center center;
+  background: url('https://images.unsplash.com/photo-1511497584788-876760111969?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=1080&ixid=MnwxfDB8MXxyYW5kb218MHx8bmF0dXJlfHx8fHx8MTY1NzUyNTg0Nw&ixlib=rb-1.2.1&q=80&utm_campaign=api-credit&utm_medium=referral&utm_source=unsplash_source&w=1920') no-repeat fixed center center;
 
   .top-section {
     text-align: center;
