--- a/src/app/bookmark-tile/bookmark-tile.component.scss
+++ b/src/app/bookmark-tile/bookmark-tile.component.scss
@@ -23,6 +23,13 @@
     max-width: 1.75rem;
   }
 
+  .fallback {
+    background-color: #f9f9f9;
+    border-radius: 50%;
+    font-size: 1.25rem;
+    font-weight: 600;
+  }
+
   &__text {
     color: #f9f9f9;
     font-size: .9rem;
