--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="app-wrapper">
 
   <div class="top-section">
-    <h1 class="top-section__time">19:00</h1>
-    <h2 class="top-section__date">1 January 2022</h2>
+    <h1 class="top-section__time">{{ datetime | async | date:'hh:mm' }}</h1>
+    <h2 class="top-section__date">{{ datetime | async | date: 'd MMMM y' }}</h2>
   </div>
 
   <div class="content-section" [@routeAnim]="prepareRoute(outlet)">
