--- a/src/styles.scss
+++ b/src/styles.scss
@@ -102,3 +102,19 @@ a {
   resize: vertical;
   min-height: 5rem;
 }
+
+// styling the scrollbar
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px #666;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #555;
+  border-radius: 10px;
+}
